fix nav bar logo overflow

--- a/client/src/styles/components/sidebar.module.css
+++ b/client/src/styles/components/sidebar.module.css
@@ -69,7 +69,7 @@
   padding-top: 60px;
 }
 
-.nav-logo {
+.sidebar-logo {
   width: 55px;
   height: 55px;
 }
